--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Awesome Full Stack Web Developer  
+  uni: Awesome University
+  year: August, 2021 &mdash; December, 2021
   # awards:
-  # summary:
+  # summary: Awesome Full Stack Web Developer Trained August - December 2021 
